kubernetes/dev/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobble-bot-dev
  namespace: dev
spec:
  selector:
    app: cobble-bot-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
