kubernetes/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cobble-dev-ingress
  namespace: dev
  labels:
    route53: cobble-dev
spec:
  rules:
    - host: "cobble-dev.zgamelogic.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cobble-bot-dev
                port:
                  number: 8080
  tls:
    - hosts:
        - "cobble-dev.zgamelogic.com"
      secretName: ingress-tls
